gobmkida/c1/create_dfa
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/create_dfa/src/patterns/dfa.c:1115:12: error: expected expression
*( _OWORD *)aux_temp.states[v6 + 1].next = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/create_dfa/src/patterns/dfa.c:1115:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)aux_temp.states[v6 + 1].next = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/create_dfa/src/patterns/dfa.c:1139:12: error: expected expression
*( _OWORD *)aux_temp.states[( unsigned int)v4].next = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/create_dfa/src/patterns/dfa.c:1139:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)aux_temp.states[( unsigned int)v4].next = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/create_dfa/src/patterns/dfa.c:1143:39: error: assigning to 'attrib_t' (aka 'struct attrib') from incompatible type 'long long'
aux_temp.indexes[aux_temp.last_index] = 0LL; 
                                      ^ ~~~
5 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/create_dfa/src/obj/3/dfa.o] Error 1
